@@ -1,3 +1,8 @@
+2008-11-18  Murray Cumming  <murrayc@murrayc.com>
+
+	* Makefile.am: Remove any mention of *.html.en files because 
+	they do not exist, to fix the build.
+
 2008-11-17  Étienne Bersac  <bersace03@gmail.com>
 
 	* Makefile.am (page_SCRIPTS):
